--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -76,7 +76,7 @@
 
                     <a class="dropdown-item" href="{% url 'about' %}">About</a>
                     <a class="dropdown-item" href="{% url 'concepts' %}">Concepts</a>
-                    <a class="dropdown-item" href="{% url 'stats' %}">Stats</a>
+                    <a class="dropdown-item" href="{% url 'stats' %}">Public stats</a>
                 </div>
             </li>
 
