Add private stats view

--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -89,6 +89,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                     <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+                    <a class="dropdown-item" href="{% url 'mystats' %}">My stats</a>
                 </div>
             </li>
             {% else %}
