--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -245,19 +245,15 @@
   <tr>
     <th>ID</th>
     <th>Serial</th>
-    <th>Datecode</th>
     <th>Manufactured</th>
     <th>Own</th>
-    <th>Condition</th>
   </tr>
   {% for lens in mine %}
   <tr>
     <td><a href="{% url 'lens-detail' lens.id_owner %}">#{{ lens.id_owner }}</a></td>
     <td><code>{{ lens.serial }}</code></td>
-    <td><code>{{ lens.datecode }}</code></td>
     <td>{{ lens.manufactured }}</td>
-    <td>{{ lens.own }}</td>
-    <td>{{ lens.condition }}</td>
+    <td>{{ lens.own|boolicontag }}</td>
   </tr>
   {% endfor %}
 </table>
