Add filter shortname

--- a/schema/templates/schema/filter_detail.html
+++ b/schema/templates/schema/filter_detail.html
@@ -6,6 +6,10 @@
     <td>Type</td>
     <td>{{ object.type }}</td>
   </tr>
+  <tr>
+    <td>Shortname</td>
+    <td>{{ object.shortname }}</td>
+  </tr>
   {% if object.attenuations is not None %}
   <tr>
     <td>Attenuation</td>
