--- a/schema/templates/schema/filter_detail.html
+++ b/schema/templates/schema/filter_detail.html
@@ -10,7 +10,7 @@
     <td>Shortname</td>
     <td>{{ object.shortname }}</td>
   </tr>
-  {% if object.attenuations is not None %}
+  {% if object.attenuation is not None %}
   <tr>
     <td>Attenuation</td>
     <td>{{ object.attenuation }}</td>
