Add some boolicons #391 #395

--- a/schema/templates/schema/flash_detail.html
+++ b/schema/templates/schema/flash_detail.html
@@ -88,7 +88,7 @@
   {% if object.ttl is not None %}
   <tr>
     <td>TTL metering</td>
-    <td>{{ object.ttl }}</td>
+    <td>{{ object.ttl|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.flash_protocol is not None %}
