Format archive dimensions

--- a/schema/templates/schema/archive_detail.html
+++ b/schema/templates/schema/archive_detail.html
@@ -14,7 +14,7 @@
   {% if object.max_width is not None %}
   <tr>
     <td>Max object size</td>
-    <td>{{ object.max_width }} &times; {{ object.max_height }}</td>
+    <td>{{ object.max_width }}&times;{{ object.max_height }}"</td>
   </tr>
   {% endif %}
   {% if object.location is not None %}
