--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -479,9 +479,9 @@
   {% for camera in mine %}
   <tr>
     <td><a href="{% url 'camera-detail' camera.id_owner %}">#{{ camera.id_owner }}</a></td>
-    <td><code>{{ camera.serial }}</code></td>
-    <td>{{ camera.manufactured }}</td>
-    <td>{{ camera.own|boolicontag }}</td>
+    <td>{% if camera.serial is not None %}<code>{{ camera.serial }}</code>{% endif %}</td>
+    <td>{% if camera.manufactured is not None %}{{ camera.manufactured }}{% endif %}</td>
+    <td>{% if camera.own is not None %}{{ camera.own|boolicontag }}{% endif %}</td>
   </tr>
   {% endfor %}
 </table>
