Express closest focus in m

--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -88,7 +88,7 @@
   {% if object.closest_focus is not None %}
   <tr>
     <td>Closest focus</td>
-    <td>{{ object.closest_focus }}cm</td>
+    <td>{{ object.closest_focus }}m</td>
   </tr>
   {% endif %}
   {% if object.elements is not None and object.groups is not None %}
