Fix display of aperture ranges

--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -81,7 +81,7 @@
   <tr>
     <td>Aperture</td>
     <td>
-      <em>f</em>/{{ object.max_aperture }}{% if object.max_aperture is not None %}-{{ object.min_aperture }}{% endif %}
+      <em>f</em>/{{ object.max_aperture }}{% if object.min_aperture is not None %}-{{ object.min_aperture }}{% endif %}
     </td>
   </tr>
   {% endif %}
