--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -455,6 +455,8 @@
   {% endif %}
 </table>
 
+{% if history %}{% include "history.html" %}{% endif %}
+
 {% if related %}
 <h4>Similar camera models</h4>
 <ul>
