--- a/schema/templates/schema/filmstock_detail.html
+++ b/schema/templates/schema/filmstock_detail.html
@@ -71,6 +71,8 @@
 </ul>
 {% endif %}
 
+{% if history %}{% include "history.html" %}{% endif %}
+
 <a data-toggle="collapse" href="#collapseFilms" role="button" aria-expanded="false" aria-controls="collapseFilms">
   Films</a>
 <div class="collapse" id="collapseFilms">
