--- a/schema/templates/schema/mount_detail.html
+++ b/schema/templates/schema/mount_detail.html
@@ -71,6 +71,8 @@
 </ul>
 {% endif %}
 
+{% if history %}{% include "history.html" %}{% endif %}
+
 <h5><a data-toggle="collapse" href="#collapseCameras" role="button" aria-expanded="false"
     aria-controls="collapseCameras">
     Camera models</a></h5>
