--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -221,7 +221,19 @@
   </tr>
   {% endif %}
 </table>
+{% if object.image %}
+<h4>Image</h4>
+<div class="text-center">
+  <img src="{{ object.image.url }}" class="img-fluid img-thumbnail" />
+</div>
+{% endif %}
 
+{% if object.diagram %}
+<h4>Optical diagram</h4>
+<div class="text-center">
+  <img src="{{ object.diagram.url }}" class="img-fluid img-thumbnail" />
+</div>
+{% endif %}
 {% if related %}
 <h4>Similar lens models</h4>
 <ul>
