--- a/schema/templates/list.html
+++ b/schema/templates/list.html
@@ -20,6 +20,7 @@
 </div>
 {% endif %}
 {% render_table table %}
+<p class="text-center"><em>{{ page_obj.paginator.count }} objects found</em></p>
 {% else %}
 <p>There are no objects in the list. <a href="{% url view.model|model_add %}">Add one</a> now!</p>
 {% endif %}
