Add <li> tags to moreactions

--- a/schema/templates/detail.html
+++ b/schema/templates/detail.html
@@ -10,5 +10,5 @@
 
 {% block actions %}
 <h4>Actions</h4>
-{% block moreactions %}{%endblock%}
+<ul>{% block moreactions %}{%endblock%}</ul>
 {%endblock%}
