--- a/schema/templates/schema/mount_detail.html
+++ b/schema/templates/schema/mount_detail.html
@@ -72,25 +72,9 @@
 {% endif %}
 
 {% if history %}{% include "history.html" %}{% endif %}
+{% endblock %}
 
-<h5><a data-toggle="collapse" href="#collapseCameras" role="button" aria-expanded="false"
-    aria-controls="collapseCameras">
-    Camera models</a></h5>
-<div class="collapse" id="collapseCameras">
-  <ul>
-    {% for cameramodel in mount.cameramodel_set.all %}
-    <li><a href="{% url 'cameramodel-detail' cameramodel.slug %}">{{ cameramodel }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
-
-<h5><a data-toggle="collapse" href="#collapseLenses" role="button" aria-expanded="false" aria-controls="collapseLenses">
-    Lens models</a></h5>
-<div class="collapse" id="collapseLenses">
-  <ul>
-    {% for lensmodel in mount.lensmodel_set.all %}
-    <li><a href="{% url 'lensmodel-detail' lensmodel.slug %}">{{ lensmodel }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+{% block moreactions %}
+<li><a href="{% url 'cameramodel-list' %}?mount={{ mount.id }}">View camera models with this mount</a></li>
+<li><a href="{% url 'lensmodel-list' %}?mount={{ mount.id }}">View lens models with this mount</a></li>
 {% endblock %}
