--- a/schema/templates/schema/negative_detail.html
+++ b/schema/templates/schema/negative_detail.html
@@ -1,4 +1,5 @@
 {% extends "detail.html" %}
+{% load formatting %}
 
 {% block content %}
 <table class="table table-hover">
@@ -33,7 +34,7 @@
   {% if object.shutter_speed is not None %}
   <tr>
     <td>Shutter speed</td>
-    <td>{{ object.shutter_speed }}</td>
+    <td>{{ object.shutter_speed|shutter }}</td>
   </tr>
   {% endif %}
   {% if object.aperture is not None %}
