Add anchor tags

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -14,7 +14,7 @@
 
 <table class="table table-hover">
   <tr>
-    <th colspan="2">Physical</th>
+    <th colspan="2">Physical</th><a name="physical">
   </tr>
   {% if object.manufacturer is not None %}
   <tr>
@@ -55,7 +55,7 @@
 
 
   <tr>
-    <th colspan="2">Optics</th>
+    <th colspan="2">Optics</th><a name="optics">
   </tr>
   {% if object.zoom is not None %}
   <tr>
@@ -147,7 +147,7 @@
 
 
   <tr>
-    <th colspan="2">Features</th>
+    <th colspan="2">Features</th><a name="features">
   </tr>
   {% if object.filter_thread is not None %}
   <tr>
@@ -205,7 +205,7 @@
 
 
   <tr>
-    <th colspan="2">Focus</th>
+    <th colspan="2">Focus</th><a name="focus">
   </tr>
   {% if object.focus_type is not None %}
   <tr>
@@ -228,7 +228,7 @@
 
 
   <tr>
-    <th colspan="2">Metering</th>
+    <th colspan="2">Metering</th><a name="metering">
   </tr>
   {% if object.metering is not None %}
   <tr>
@@ -281,7 +281,7 @@
 
 
   <tr>
-    <th colspan="2">Shutter</th>
+    <th colspan="2">Shutter</th><a name="shutter">
   </tr>
   {% if object.shutter_type is not None %}
   <tr>
@@ -321,7 +321,7 @@
 
 
   <tr>
-    <th colspan="2">Film transport</th>
+    <th colspan="2">Film transport</th><a name="filmtransport">
   </tr>
   {% if object.power_drive is not None %}
   <tr>
@@ -338,7 +338,7 @@
 
 
   <tr>
-    <th colspan="2">Power</th>
+    <th colspan="2">Power</th><a name="power">
   </tr>
   {% if object.battery_qty is not None %}
 
@@ -353,7 +353,7 @@
 
 
   <tr>
-    <th colspan="2">Flash</th>
+    <th colspan="2">Flash</th><a name="flash">
   </tr>
   {% if object.int_flash is not None %}
   <tr>
@@ -400,7 +400,7 @@
 
 
   <tr>
-    <th colspan="2">Features</th>
+    <th colspan="2">Features</th><a name="features">
   </tr>
   {% if object.dof_preview is not None %}
   <tr>
@@ -435,7 +435,7 @@
 
 
   <tr>
-    <th colspan="2">Misc</th>
+    <th colspan="2">Misc</th><a name="misc">
   </tr>
   {% if object.notes is not None %}
   <tr>
