--- a/schema/templates/schema/filmstock_detail.html
+++ b/schema/templates/schema/filmstock_detail.html
@@ -38,7 +38,7 @@
   </tr>
   {% endif %}
   <tr>
-    <th colspan="2">Misc</th>
+    <th colspan="2">Misc</th><a name="misc">
   </tr>
   {% if object.tags.all %}
   <tr>
