--- a/schema/templates/schema/flashprotocol_detail.html
+++ b/schema/templates/schema/flashprotocol_detail.html
@@ -13,7 +13,7 @@
   </tr>
   {% endif %}
   <tr>
-    <th colspan="2">Misc</th>
+    <th colspan="2">Misc</th><a name="misc">
   </tr>
   {% if object.created_at is not None %}
   <tr>
