--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -14,7 +14,7 @@
 
 <table class="table table-hover">
   <tr>
-    <th colspan="2">Physical</th>
+    <th colspan="2">Physical</th><a name="physical">
   </tr>
   {% if object.manufacturer is not None %}
   <tr>
@@ -65,7 +65,7 @@
 
 
   <tr>
-    <th colspan="2">Optics</th>
+    <th colspan="2">Optics</th><a name="optics">
   </tr>
   {% if object.zoom is not None %}
   <tr>
@@ -167,7 +167,7 @@
 
 
   <tr>
-    <th colspan="2">Features</th>
+    <th colspan="2">Features</th><a name="features">
   </tr>
   {% if object.autofocus is not None %}
   <tr>
@@ -202,7 +202,7 @@
 
 
   <tr>
-    <th colspan="2">Misc</th>
+    <th colspan="2">Misc</th><a name="misc">
   </tr>
   {% if object.notes is not None %}
   <tr>
