--- a/schema/templates/schema/battery_detail.html
+++ b/schema/templates/schema/battery_detail.html
@@ -30,7 +30,7 @@
   </tr>
   {% endif %}
   <tr>
-    <th colspan="2">Misc</th>
+    <th colspan="2">Misc</th><a name="misc">
   </tr>
   {% if object.created_at is not None %}
   <tr>
