--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -72,6 +72,7 @@
 
                     <a class="dropdown-item" href="{% url 'about' %}">About</a>
                     <a class="dropdown-item" href="{% url 'concepts' %}">Concepts</a>
+                    <a class="dropdown-item" href="{% url 'faq' %}">FAQs</a>
                     <a class="dropdown-item" href="{% url 'condition-list' %}">Condition grading</a>
                     <a class="dropdown-item" href="{% url 'stats' %}">Public stats</a>
                 </div>
