--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -1,4 +1,5 @@
 {% extends "detail.html" %}
+{% load static %}
 {% load boolicontag %}
 {% load formatting %}
 
@@ -14,7 +15,8 @@
 
 <table class="table table-hover">
   <tr>
-    <th colspan="2">Physical</th><a name="physical">
+    <th colspan="2"><img src="{% static "svg/weight.svg" %}" width="30" height="30" alt="Home"> Physical</th><a
+      name="physical">
   </tr>
   {% if object.manufacturer is not None %}
   <tr>
@@ -55,7 +57,8 @@
 
 
   <tr>
-    <th colspan="2">Optics</th><a name="optics">
+    <th colspan="2"><img src="{% static "svg/optics.svg" %}" width="30" height="30" alt="Home"> Optics</th><a
+      name="optics">
   </tr>
   {% if object.zoom is not None %}
   <tr>
@@ -141,7 +144,8 @@
 
 
   <tr>
-    <th colspan="2">Features</th><a name="features">
+    <th colspan="2"><img src="{% static "svg/features.svg" %}" width="30" height="30" alt="Home"> Features</th><a
+      name="features">
   </tr>
   {% if object.filter_thread is not None %}
   <tr>
@@ -199,7 +203,8 @@
 
 
   <tr>
-    <th colspan="2">Focus</th><a name="focus">
+    <th colspan="2"><img src="{% static "svg/focus.svg" %}" width="30" height="30" alt="Home"> Focus</th><a
+      name="focus">
   </tr>
   {% if object.focus_type is not None %}
   <tr>
@@ -222,7 +227,8 @@
 
 
   <tr>
-    <th colspan="2">Metering</th><a name="metering">
+    <th colspan="2"><img src="{% static "svg/meter.svg" %}" width="30" height="30" alt="Home"> Metering</th><a
+      name="metering">
   </tr>
   {% if object.metering is not None %}
   <tr>
@@ -275,7 +281,8 @@
 
 
   <tr>
-    <th colspan="2">Shutter</th><a name="shutter">
+    <th colspan="2"><img src="{% static "svg/shutter.svg" %}" width="30" height="30" alt="Home"> Shutter</th><a
+      name="shutter">
   </tr>
   {% if object.shutter_type is not None %}
   <tr>
@@ -315,7 +322,8 @@
 
 
   <tr>
-    <th colspan="2">Film transport</th><a name="filmtransport">
+    <th colspan="2"><img src="{% static "svg/next.svg" %}" width="30" height="30" alt="Home"> Film transport</th><a
+      name="filmtransport">
   </tr>
   {% if object.power_drive is not None %}
   <tr>
@@ -332,7 +340,8 @@
 
 
   <tr>
-    <th colspan="2">Power</th><a name="power">
+    <th colspan="2"><img src="{% static "svg/battery.svg" %}" width="30" height="30" alt="Home"> Power</th><a
+      name="power">
   </tr>
   {% if object.battery_qty is not None %}
 
@@ -347,7 +356,8 @@
 
 
   <tr>
-    <th colspan="2">Flash</th><a name="flash">
+    <th colspan="2"><img src="{% static "svg/flash.svg" %}" width="30" height="30" alt="Home"> Flash</th><a
+      name="flash">
   </tr>
   {% if object.int_flash is not None %}
   <tr>
@@ -394,7 +404,8 @@
 
 
   <tr>
-    <th colspan="2">Features</th><a name="features">
+    <th colspan="2"><img src="{% static "svg/features.svg" %}" width="30" height="30" alt="Home"> Features</th><a
+      name="features">
   </tr>
   {% if object.dof_preview is not None %}
   <tr>
@@ -429,7 +440,7 @@
 
 
   <tr>
-    <th colspan="2">Misc</th><a name="misc">
+    <th colspan="2"><img src="{% static "svg/misc.svg" %}" width="30" height="30" alt="Home"> Misc</th><a name="misc">
   </tr>
   {% if object.notes is not None %}
   <tr>
