Add anchors and links to detail headings

--- a/help/templates/about.html
+++ b/help/templates/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block heading %}<h4>
-    <img src="{% static "svg/about.svg" %}" width="30" height="30" alt="Home">
+    <img src="{% static "svg/about.svg" %}" width="30" height="30" alt="About">
     About</h4>{%endblock%}
 
 {% block content %}
