--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -15,8 +15,8 @@
 
 <table class="table table-hover">
   <tr>
-    <th colspan="2"><img src="{% static "svg/weight.svg" %}" width="30" height="30" alt="Home"> Physical</th><a
-      name="physical">
+    <th colspan="2" id="physical"><img src="{% static "svg/weight.svg" %}" width="30" height="30" alt="Physical"> <a
+        href="#physical">Physical</a></th>
   </tr>
   {% if object.manufacturer is not None %}
   <tr>
@@ -57,8 +57,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/optics.svg" %}" width="30" height="30" alt="Home"> Optics</th><a
-      name="optics">
+    <th colspan="2" id="optics"><img src="{% static "svg/optics.svg" %}" width="30" height="30" alt="Optics"> <a
+        href="#optics">Optics</a></th>
   </tr>
   {% if object.zoom is not None %}
   <tr>
@@ -144,8 +144,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/features.svg" %}" width="30" height="30" alt="Home"> Features</th><a
-      name="features">
+    <th colspan="2" id="features"><img src="{% static "svg/features.svg" %}" width="30" height="30" alt="Features"> <a
+        href="#features">Features</a></th>
   </tr>
   {% if object.filter_thread is not None %}
   <tr>
@@ -203,8 +203,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/focus.svg" %}" width="30" height="30" alt="Home"> Focus</th><a
-      name="focus">
+    <th colspan="2" id="focus"><img src="{% static "svg/focus.svg" %}" width="30" height="30" alt="Focus"> <a
+        href="#focus">Focus</a></th>
   </tr>
   {% if object.focus_type is not None %}
   <tr>
@@ -227,8 +227,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/meter.svg" %}" width="30" height="30" alt="Home"> Metering</th><a
-      name="metering">
+    <th colspan="2" id="metering"><img src="{% static "svg/meter.svg" %}" width="30" height="30" alt="Metering"> <a
+        href="#metering">Metering</a></th>
   </tr>
   {% if object.metering is not None %}
   <tr>
@@ -281,8 +281,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/shutter.svg" %}" width="30" height="30" alt="Home"> Shutter</th><a
-      name="shutter">
+    <th colspan="2" id="shutter"><img src="{% static "svg/shutter.svg" %}" width="30" height="30" alt="Shutter"> <a
+        href="#shutter">Shutter</a></th>
   </tr>
   {% if object.shutter_type is not None %}
   <tr>
@@ -322,8 +322,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/next.svg" %}" width="30" height="30" alt="Home"> Film transport</th><a
-      name="filmtransport">
+    <th colspan="2" id="filmtransport"><img src="{% static "svg/next.svg" %}" width="30" height="30" alt="Film transport"> <a
+        href="#filmtransport">Film transport</a></th>
   </tr>
   {% if object.power_drive is not None %}
   <tr>
@@ -340,8 +340,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/battery.svg" %}" width="30" height="30" alt="Home"> Power</th><a
-      name="power">
+    <th colspan="2" id="power"><img src="{% static "svg/battery.svg" %}" width="30" height="30" alt="Power"> <a
+        href="#power">Power</a></th>
   </tr>
   {% if object.battery_qty is not None %}
 
@@ -356,8 +356,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/flash.svg" %}" width="30" height="30" alt="Home"> Flash</th><a
-      name="flash">
+    <th colspan="2" id="flash"><img src="{% static "svg/flash.svg" %}" width="30" height="30" alt="Flash"> <a
+        href="#flash">Flash</a></th>
   </tr>
   {% if object.int_flash is not None %}
   <tr>
@@ -404,8 +404,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/features.svg" %}" width="30" height="30" alt="Home"> Features</th><a
-      name="features">
+    <th colspan="2" id="features"><img src="{% static "svg/features.svg" %}" width="30" height="30" alt="Features"> <a
+        href="#features">Features</a></th>
   </tr>
   {% if object.dof_preview is not None %}
   <tr>
@@ -440,7 +440,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/misc.svg" %}" width="30" height="30" alt="Home"> Misc</th><a name="misc">
+    <th colspan="2" id="misc"><img src="{% static "svg/misc.svg" %}" width="30" height="30" alt="Misc"> <a
+        href="#misc">Misc</a></th>
   </tr>
   {% if object.notes is not None %}
   <tr>
