--- a/schema/templates/schema/developer_detail.html
+++ b/schema/templates/schema/developer_detail.html
@@ -32,7 +32,7 @@
   </tr>
   {% endif %}
   <tr>
-    <th colspan="2">Misc</th><a name="misc">
+    <th colspan="2" id="misc"><a href="#misc">Misc</a></th>
   </tr>
   {% if object.tags.all %}
   <tr>
