--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -15,8 +15,8 @@
 
 <table class="table table-hover">
   <tr>
-    <th colspan="2"><img src="{% static "svg/weight.svg" %}" width="30" height="30" alt="Home"> Physical</th><a
-      name="physical">
+    <th colspan="2" id="physical"><img src="{% static "svg/weight.svg" %}" width="30" height="30" alt="Physical"> <a
+        href="#physical">Physical</a></th>
   </tr>
   {% if object.manufacturer is not None %}
   <tr>
@@ -67,8 +67,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/optics.svg" %}" width="30" height="30" alt="Home"> Optics</th><a
-      name="optics">
+    <th colspan="2" id="optics"><img src="{% static "svg/optics.svg" %}" width="30" height="30" alt="Optics"> <a
+        href="#optics">Optics</a></th>
   </tr>
   {% if object.zoom is not None %}
   <tr>
@@ -164,8 +164,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/features.svg" %}" width="30" height="30" alt="Home"> Features</th><a
-      name="features">
+    <th colspan="2" id="features"><img src="{% static "svg/features.svg" %}" width="30" height="30" alt="Features"> <a
+        href="#features">Features</a></th>
   </tr>
   {% if object.autofocus is not None %}
   <tr>
@@ -200,7 +200,8 @@
 
 
   <tr>
-    <th colspan="2"><img src="{% static "svg/misc.svg" %}" width="30" height="30" alt="Home"> Misc</th><a name="misc">
+    <th colspan="2" id="misc"><img src="{% static "svg/misc.svg" %}" width="30" height="30" alt="Misc"> <a
+        href="#misc">Misc</a></th>
   </tr>
   {% if object.notes is not None %}
   <tr>
