--- a/schema/templates/schema/negative_detail.html
+++ b/schema/templates/schema/negative_detail.html
@@ -1,5 +1,4 @@
 {% extends "detail.html" %}
-{% load formatting %}
 
 {% block content %}
 <table class="table table-hover">
@@ -34,7 +33,7 @@
   {% if object.shutter_speed is not None %}
   <tr>
     <td>Shutter speed</td>
-    <td>{{ object.shutter_speed|shutter }}</td>
+    <td>{{ object.shutter_speed }}</td>
   </tr>
   {% endif %}
   {% if object.aperture is not None %}
