Add link to email support

--- a/schema/templates/footer.html
+++ b/schema/templates/footer.html
@@ -6,6 +6,8 @@
                         width="30" height="30" alt="Facebook"></a>
         <a href="https://github.com/djjudas21/camerahub" target="_blank"><img src="{% static "svg/github.svg" %}"
                         width="30" height="30" alt="Github"></a>
+        <a href="mailto:support@camerahub.info"><img src="{% static "svg/mail.svg" %}" width="30" height="30"
+                        alt="Mail"></a>
         <a href="https://icons8.com/icons" target="_blank"><img src="{% static "svg/icons8.svg" %}" width="30"
                         height="30" alt="Icons8"></a>
         <br>
