--- a/help/templates/about.html
+++ b/help/templates/about.html
@@ -68,6 +68,12 @@
         href="https://www.facebook.com/camerahubapp/">CameraHub Facebook page</a> where you can keep up to date with
     news.</p>
 
+<h2>Support</h2>
+
+<p>If you get stuck with CameraHub, informal support is available by messaging <a
+        href="https://www.facebook.com/camerahubapp/">CameraHub on Facebook</a>, or by sending an email to <a
+        href="mailto:support@camerahub.info">support@camerahub.info</a>. If you think you've found a bug in CameraHub, or if you want to suggest a new feature, you can <a href="https://github.com/djjudas21/camerahub/issues">log an issue on Github</a>.</p>
+
 <h2>Roadmap</h2>
 
 <p>CameraHub is an evolving project. For a detailed look at current bugs and feature requests, check out the <a
