--- a/schema/templates/schema/negative_detail.html
+++ b/schema/templates/schema/negative_detail.html
@@ -39,7 +39,7 @@
   {% if object.aperture is not None %}
   <tr>
     <td>Aperture</td>
-    <td>{{ object.aperture }}</td>
+    <td><em>f</em>/{{ object.aperture }}</td>
   </tr>
   {% endif %}
   {% if object.filter is not None %}
