Add sharing icons to several public models

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -488,6 +488,10 @@
       {% endfor %}</td>
   </tr>
   {% endif %}
+  <tr>
+    <td>Sharing</td>
+    <td>{% include "sharing.html" %}</td>
+  </tr>
 </table>
 
 {% if history %}{% include "history.html" %}{% endif %}
