--- a/schema/templates/schema/developer_detail.html
+++ b/schema/templates/schema/developer_detail.html
@@ -42,6 +42,10 @@
       {% endfor %}</td>
   </tr>
   {% endif %}
+  <tr>
+    <td>Sharing</td>
+    <td>{% include "sharing.html" %}</td>
+  </tr>
 </table>
 
 {% if related %}
