--- a/schema/templates/schema/toner_detail.html
+++ b/schema/templates/schema/toner_detail.html
@@ -35,6 +35,10 @@
       {% endfor %}</td>
   </tr>
   {% endif %}
+  <tr>
+    <td>Sharing</td>
+    <td>{% include "sharing.html" %}</td>
+  </tr>
 </table>
 
 {% if related %}
