--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -489,6 +489,19 @@
       {% endfor %}</td>
   </tr>
   {% endif %}
+  {% if related %}
+  <tr>
+    <td>Similar camera models</td>
+    <td>
+      <ul class="list-inline">
+        {% for relateditem in related %}
+        <li class="list-inline-item"><a href="{% url 'cameramodel-detail' relateditem.slug %}">{{ relateditem }}</a>
+        </li>
+        {% endfor %}
+      </ul>
+    </td>
+  </tr>
+  {% endif %}
   <tr>
     <td>Sharing</td>
     <td>{% include "sharing.html" %}</td>
@@ -496,15 +509,6 @@
 </table>
 
 {% if history %}{% include "history.html" %}{% endif %}
-
-{% if related %}
-<h4>Similar camera models</h4>
-<ul>
-  {% for relateditem in related %}
-  <li><a href="{% url 'cameramodel-detail' relateditem.slug %}">{{ relateditem }}</a></li>
-  {% endfor %}
-</ul>
-{% endif %}
 
 {% if user.is_authenticated %}
 {% if mine %}
