--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -217,6 +217,18 @@
       {% endfor %}</td>
   </tr>
   {% endif %}
+  {% if related %}
+  <tr>
+    <td>Similar lens models</td>
+    <td>
+      <ul class="list-inline">
+        {% for relateditem in related %}
+        <li class="list-inline-item"><a href="{% url 'lensmodel-detail' relateditem.slug %}">{{ relateditem }}</a></li>
+        {% endfor %}
+      </ul>
+    </td>
+  </tr>
+  {% endif %}
   {% if object.url is not None %}
   <tr>
     <td>URL</td>
@@ -234,14 +246,6 @@
 <div class="text-center">
   <img src="{{ object.diagram.url }}" class="img-fluid img-thumbnail" />
 </div>
-{% endif %}
-{% if related %}
-<h4>Similar lens models</h4>
-<ul>
-  {% for relateditem in related %}
-  <li><a href="{% url 'lensmodel-detail' relateditem.slug %}">{{ relateditem }}</a></li>
-  {% endfor %}
-</ul>
 {% endif %}
 
 {% if history %}{% include "history.html" %}{% endif %}
