--- a/schema/templates/schema/manufacturer_detail.html
+++ b/schema/templates/schema/manufacturer_detail.html
@@ -39,7 +39,7 @@
   <tr>
     <th colspan="2" id="misc"><a href="#misc">Misc</a></th>
   </tr>
-    {% if object.tags.all %}
+  {% if object.tags.all %}
   <tr>
     <td>Tags</td>
     <td>{% for tag in object.tags.all %}
@@ -47,20 +47,24 @@
       {% endfor %}</td>
   </tr>
   {% endif %}
+  {% if related %}
+  <tr>
+    <td>Similar manufacturers</td>
+    <td>
+      <ul class="list-inline">
+        {% for relateditem in related %}
+        <li class="list-inline-item"><a href="{% url 'manufacturer-detail' relateditem.slug %}">{{ relateditem }}</a>
+        </li>
+        {% endfor %}
+      </ul>
+    </td>
+  </tr>
+  {% endif %}
   <tr>
     <td>Sharing</td>
     <td>{% include "sharing.html" %}</td>
   </tr>
 </table>
-
-{% if related %}
-<h4>Similar manufacturers</h4>
-<ul>
-  {% for relateditem in related %}
-  <li><a href="{% url 'manufacturer-detail' relateditem.slug %}">{{ relateditem }}</a></li>
-  {% endfor %}
-</ul>
-{% endif %}
 
 {% if history %}{% include "history.html" %}{% endif %}
 {% endblock %}
