Move edit history into tabular format

--- a/schema/templates/schema/developer_detail.html
+++ b/schema/templates/schema/developer_detail.html
@@ -47,7 +47,6 @@
     <td>Similar developers</td>
     <td>
       <ul class="list-inline">
-
         {% for relateditem in related %}
         <li class="list-inline-item"><a href="{% url 'developer-detail' relateditem.slug %}">{{ relateditem }}</a></li>
         {% endfor %}
@@ -55,11 +54,15 @@
     </td>
   </tr>
   {% endif %}
+  {% if history %}
+  <tr>
+    <td>Edit history</td>
+    <td>{% include "history.html" %}</td>
+  </tr>
+  {% endif %}
   <tr>
     <td>Sharing</td>
     <td>{% include "sharing.html" %}</td>
   </tr>
 </table>
-
-{% if history %}{% include "history.html" %}{% endif %}
 {% endblock %}
