--- a/schema/templates/history.html
+++ b/schema/templates/history.html
@@ -1,7 +1,6 @@
-<h4>Edit history</h4>
-<ul>
+<ul class="list-unstyled">
     {% for historyitem in history %}
-    <li>{{ historyitem.history_object }} edited {{ historyitem.history_date }}{% if historyitem.history_user %} by
+    <li>Edited {{ historyitem.history_date }}{% if historyitem.history_user %} by
         {{ historyitem.history_user }}{% endif %}</li>
     {% endfor %}
 </ul>
