--- a/schema/templates/schema/battery_detail.html
+++ b/schema/templates/schema/battery_detail.html
@@ -29,7 +29,13 @@
     </td>
   </tr>
   {% endif %}
+  {% if history %}
+  <tr>
+    <td>Edit history</td>
+    <td>{% include "history.html" %}</td>
+  </tr>
+  {% endif %}
 </table>
 
-{% if history %}{% include "history.html" %}{% endif %}
+
 {% endblock %}
