--- a/schema/templates/schema/flash_detail.html
+++ b/schema/templates/schema/flash_detail.html
@@ -121,7 +121,11 @@
     <td>{{ object.cost }}</td>
   </tr>
   {% endif %}
+  {% if history %}
+  <tr>
+    <td>Edit history</td>
+    <td>{% include "history.html" %}</td>
+  </tr>
+  {% endif %}
 </table>
-
-{% if history %}{% include "history.html" %}{% endif %}
 {% endblock %}
