--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -161,7 +161,37 @@
     <td>{{ object.image_circle }}mm</td>
   </tr>
   {% endif %}
+  {% if object.diagram %}
+  <tr>
+    <td>Optical diagram</td>
+    <td>
+      <a href="#diagram" data-toggle="modal">
+        <img src="{{ object.diagram.url }}" style="width: 200px;" class="img-fluid img-thumbnail" />
+      </a>
 
+      <!-- Modal -->
+      <div class="modal fade" id="diagram" tabindex="-1" role="dialog" aria-labelledby="diagramLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="diagramLabel">{{ object }}</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <img src="{{ object.diagram.url }}" class="img-thumbnail" />
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </td>
+  </tr>
+  {% endif %}
 
   <tr>
     <th colspan="2" id="features"><img src="{% static "svg/features.svg" %}" width="30" height="30" alt="Features"> <a
@@ -246,13 +276,6 @@
     <td>{% include "sharing.html" %}</td>
   </tr>
 </table>
-
-{% if object.diagram %}
-<h4>Optical diagram</h4>
-<div class="text-center">
-  <img src="{{ object.diagram.url }}" class="img-fluid img-thumbnail" />
-</div>
-{% endif %}
 
 {% if user.is_authenticated %}
 {% if mine %}
