--- a/schema/templates/stats.html
+++ b/schema/templates/stats.html
@@ -14,6 +14,7 @@
                 <a href="{{ stat.url }}"><img class="mr-3" src="{% static stat.image %}" style="width: 80px"></a>
                 <div class="media-body">
                     <h4 class="mt-0 mb-1">{{ stat.value }}</h4>
+                    {% if stat.subheading %}<h5 class="mt-0 mb-1">{{ stat.subheading }}</h5>{% endif %}
                     <p>{{ stat.item }}</p>
                 </div>
             </li>
